force-app/main/default/objects/Account/fields/Active_contacts__c.field-meta.xml
<CustomField>
    <fullName>Active_contacts__c</fullName>
    <label>Active contacts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>