force-app/main/default/objects/Account/fields/Created_for_Search__c.field-meta.xml
<CustomField>
    <fullName>Created_for_Search__c</fullName>
    <defaultValue>&apos;DE*&apos;</defaultValue>
    <label>Created for Search</label>
    <length>5</length>
    <type>Text</type>
</CustomField>