force-app/main/default/objects/Account/validationRules/no_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>no_blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE( Type ),&quot;&quot;) &amp;&amp;
ISPICKVAL(Type , &quot;&quot;) &amp;&amp;
IsPersonAccount = True</errorConditionFormula>
    <errorMessage>Cannot be empty</errorMessage>
</ValidationRule>