force-app/main/default/objects/Account/validationRules/Only_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_numeric</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER(Fax))</errorConditionFormula>
    <errorMessage>Please enter numeric value only</errorMessage>
</ValidationRule>